--- a/package.json
+++ b/package.json
@@ -83,5 +83,13 @@
   },
   "engines": {
     "node": ">=10.9.0"
+  },
+  "dependencies": {
+    "@angular/animations": "^8.2.3",
+    "@angular/cdk": "^8.1.3",
+    "@angular/material": "^8.1.3",
+    "@remotemonster/sdk": "^2.4.17",
+    "hammerjs": "^2.0.8",
+    "mat-video": "^2.7.2"
   }
 }
