--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "dependencies": {
     "@angular/animations": "^8.2.3",
     "@angular/cdk": "^8.1.3",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/material": "^8.1.3",
     "@remotemonster/sdk": "^2.4.17",
     "hammerjs": "^2.0.8",
