--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "codelyzer": "5.1.0",
     "conventional-changelog-cli": "2.0.21",
     "core-js": "3.1.4",
-    "electron": "6.0.2",
+    "electron": "^6.0.7",
     "electron-builder": "21.2.0",
     "electron-reload": "1.5.0",
     "jasmine-core": "3.4.0",
@@ -85,12 +85,18 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.3",
-    "@angular/cdk": "^8.1.4",
+    "@angular/animations": "^8.0.0 || ^9.0.0-0",
+    "@angular/cdk": "~8.1.4",
     "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.0.0 || ^9.0.0-0",
     "@angular/material": "^8.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@remotemonster/sdk": "^2.4.17",
+    "bootstrap": "^4.3.1",
+    "bootstrap-material-design": "^4.1.2",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "mat-video": "^2.7.2"
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
