--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+caster.json
+setting.json
+
 # compiled output
 /dist
 /tmp
