--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "webrtc-adapter": "^7.3.0"
   }
 }
